Updated index.html paragraph with CSS styling

--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        p {
+            color: #0000FF;
+            font-size: 20px;
+            text-align: justify;
+            width: 50%;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Hello git and github</h1>
+
+    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at
+        its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+        opposed to using 'Content here, content here', making it look like readable English.</p>
 </body>
 
 </html>
